# shelf

./: LICENSE  README.md
client/: nuxt.config.ts  package-lock.json  package.json  tsconfig.json
client/assets/: color.scss  style.scss
client/components/: Listbox.vue
client/layouts/: default.vue
client/pages/: index.vue  new_project.vue
server/: Cargo.toml  shelf.sql
server/src/: main.rs
server/src/controllers/: mod.rs  user.rs
server/src/models/: mod.rs  project.rs  user.rs
